Match download error notification message with that on download shelf

Currently we use something like "No permission" for notification text.
On download shelf, it is "Failed - No Permission", which is better as
user will know download actually failed.

BUG=888786

Change-Id: I0e7809d1a06db454cfe43c5df05da58595a02b31
Reviewed-on: https://chromium-review.googlesource.com/c/1259223
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596457}